# saltcrypt

./: Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
src/: core.rs  main.rs
src/gui/: run.rs  style.css  ui.xml
