[package]
name = "saltcrypt"
version = "0.1.5"
edition = "2021"
authors = ["Mikko Kolehmainen"]
description = "Easy-to-use, in-place file encryption tool using HKDF and AEAD"
license = "MIT"

[dependencies]
rust-crypto = "0.2.36"
chacha20poly1305 = "0.9.0"
clap = "2.34.0"
gtk = { version = "0.3.1", package = "gtk4" }